Thu Dec  4 11:07:35 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Some tests now seem to run perfect

Thu Dec  4 09:45:35 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fixed compile problems with Solaris wchar

Thu Dec  4 08:11:35 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Intrusive_List.h:
        * ace/Intrusive_List_Node.h:
          Include config-lite instead of config-all to break circular
          includes in Object_Manager_Base

        * ace/OS_NS_errno.h:
          Doxygen change

Wed Dec  3 23:35:35 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h: Reverted change from:
          Mon Dec  1 23:51:32 UTC 2008  Steve Huston  <shuston@riverace.com>
          It broke cases where the format specifier was used in string
          catenation. This reintroduces a build failure on Solaris wide-char.

Wed Dec  3 20:25:19 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.cpp (compare): Fixed logic error when strings are
          equal, introduced by
          Wed Dec  3 16:31:11 UTC 2008  Steve Huston  <shuston@riverace.com>

Wed Dec  3 18:38:49 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/svn/svn-prefs.reg:

          Added auto-prop settings for .xme files, which are exported
          GME files and only created on Windows platforms.

Wed Dec 03 18:14:25 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * bin/tao_other_tests.lst:
          Added orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test

Wed Dec  3 16:31:11 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.cpp (compare): Compare lengths directly instead of
          subtracting; clearer and avoids 32/64-bit signed/unsigned issues.

Wed Dec  3 10:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h: