@@ -100,7 +100,7 @@ namespace ACE_Utils
   }
 
   const ACE_CString*
-  UUID::to_string (void)
+  UUID::to_string (void) const
   {
     /// Only compute the string representation once.
     if (as_string_ == 0)
@@ -461,7 +461,7 @@ namespace ACE_Utils
     // sequence.
     if (timestamp <= time_last_)
       {
-        uuid_state_.clock_sequence = static_cast<ACE_UINT16> 
+        uuid_state_.clock_sequence = static_cast<ACE_UINT16>
           ((uuid_state_.clock_sequence + 1) & ACE_UUID_CLOCK_SEQ_MASK);
       }
     // If the system time ticked since the last UUID was
